--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,10 +1,42 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: system-ui;
-    background: #cccc;
+  font-family: system-ui;
+  background: #cccc;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-around;
+  background: #ffff;
+
+  .logo {
+    text-align: center;
+  }
+
+  .logo {
+    color: green;
+  }
+
+  .nav-links  {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    margin: 10px;
+    color: #000000;
+    
+    li  {
+      list-style: none;
+
+      a {
+        text-decoration: none;
+        color: #000000;
+      }
+    }
+  }
+
 }
