--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -39,6 +39,10 @@ body {
   text-align: center;
 }
 
+.logo-img{
+  width: 100px;
+  margin: 0;
+}
 .logo h1 {
   color: var(--primary-color);
   font-size: 1.5rem;
